# pull-request-service

./: .pylintrc  Dockerfile  Jenkinsfile  README.md  agent-pod.yaml  pyproject.toml
.github/: pull_request_template.md
defaults/: main.yml
handlers/: main.yml
kustomize/: clusterrolebindings.yaml  deployments.yaml  ingresses.yaml  kustomization.yaml  secrets.yaml  serviceaccounts.yaml  services.yaml
meta/: main.yml
playbooks/pull-request-service/: config.yml
playbooks/pull-request-service/private/: config.yml
playbooks/pull-request-service/private/roles/: lib_openshift  lib_utils  openshift_facts
pull_request_service/: payload.py  project.py  server.py  webhook_token.py
tasks/: build.yml  install_pull_request.yml  main.yml
templates/: build_config.j2  cluster_role.j2  cluster_role_binding.j2  deployment_controller.j2  image_stream.j2  route.j2  service.j2
tests/: test_pull_request_service.py
vars/: main.yml
