[tool.poetry]
name = "pull-request-service"
version = "0.1.0"
description = ""
authors = ["Stephen Badger <stephen.badger@vitalbeats.com>"]

[tool.poetry.dependencies]
python = "^3.7"
twisted = "^19.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[[tool.poetry.source]]
name = "vitalbeats"
url = "https://pypiserver.vitalbeats.dev/simple/"
secondary = true

[tool.poetry.scripts]
server = "pull_request_service.server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

